fix style guide and set visibility styles

--- a/src/less/src/tile.less
+++ b/src/less/src/tile.less
@@ -14,7 +14,10 @@ A majority of buttons in the site are built from the same base class.
 .man.angle-6 - Show man rotated to direction 6.
 .man.angle-7 - Show man rotated to direction 7.
 .man.angle-8 - Show man rotated to direction 8.
-.visible     - Visible.
+.visible     - Visible tile type 0.
+.visible.a1  - Visible tile type 1.
+.visible.a2  - Visible tile type 2.
+.visible.a3  - Visible tile type 3.
 :hover       - Hover.
 
 Markup: tile.hbs
@@ -28,12 +31,36 @@ Style guide: tiles.static
   .transform(rotate(45deg));
   margin: -14px 0 0 20px;
   float: left;
-  opacity: .5;
+  .transition(background 0.5s linear);
   .transition(opacity 0.5s linear);
-  background: blue;
+  background: #00007f;
 
   &.visible {
-    opacity: 1;
+    background: blue;
+
+    .wall1,
+    .wall2 {
+      opacity: .3;
+    }
+
+    &.a1 {
+      .wall1 {
+        background: yellow;
+      }
+    }
+    &.a2 {
+      .wall1 {
+        background: green;
+      }
+    }
+    &.a3 {
+      .wall1 {
+        background: yellow;
+      }
+      .wall2 {
+        background: green;
+      }
+    }
   }
 
   &.man {
@@ -112,7 +139,7 @@ Style guide: tiles.static
     .wall1 {
       display: block;
       float: right;
-      background: yellow;
+      background: #7f7f00;
       .size(@c_size);
       .transform(skewY(45deg) translate(0, @c_size*-0.5));
     }
@@ -121,7 +148,7 @@ Style guide: tiles.static
     .wall1 {
       display: block;
       float: left;
-      background: green;
+      background: #004000;
       .size(@c_size);
       .transform(skewX(45deg) translate(@c_size*-0.5, 0));
     }
@@ -130,7 +157,7 @@ Style guide: tiles.static
     .wall1 {
       display: block;
       float: right;
-      background: yellow;
+      background: #7f7f00;
       .size(@c_size);
       .transform(skewY(45deg) translate(0, @c_size*-0.5));
     }
@@ -138,7 +165,7 @@ Style guide: tiles.static
     .wall2 {
       display: block;
       float: left;
-      background: green;
+      background: #004000;
       .size(@c_size);
       .transform(skewX(45deg) translate(@c_size*0.5, @c_size*-1));
     }
